# LLMParty

./: LICENSE  README.md  pyproject.toml
src/: __init__.py  config.yaml  main.py  setup.py
tests/: test_llmparty.py
